--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/splash-screen": "^6.0.1",
     "@capacitor/status-bar": "6.0.0",
+    "@ctrl/tinycolor": "^4.1.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@ionic/angular": "^8.0.0",
     "@ng-select/ng-select": "^13.7.0",
@@ -42,6 +43,7 @@
     "ngx-otp-input": "^1.1.0",
     "ngx-print": "^1.5.1",
     "ngx-spinner": "^17.0.0",
+    "pdfjs-dist": "^4.10.38",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
